--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <li class="active"><a href="index.html">Home</a></li>
                 <li><a href="#">Reviews</a></li>
                 <li><a href="#">Videos</a></li>
-                <li><a href="reference.html">Subrcribe</a></li>
+                <li><a href="reference.php">Register</a></li>
 
 
             </ul>
